--- a/werewolf/templates/login.html
+++ b/werewolf/templates/login.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <title>登录</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('werewolf_api.static', filename='css/bootstrap.min.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('werewolf_api.static', filename='css/login.css') }}">
 </head>
 
 <body class="text-center">
@@ -35,9 +35,9 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2017-2019</p>
     </form>
-    <!--     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/login.js') }}"></script> -->
+    <!--     <script type="text/javascript" src="{{ url_for('werewolf_api.static', filename='js/jquery-3.4.1.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('werewolf_api.static', filename='js/bootstrap.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('werewolf_api.static', filename='js/login.js') }}"></script> -->
 </body>
 
 </html>
