--- a/werewolf/templates/werewolf_game.html
+++ b/werewolf/templates/werewolf_game.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <title>狼人杀房间</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/werewolf_game.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('werewolf_api.static', filename='css/bootstrap.min.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('werewolf_api.static', filename='css/werewolf_game.css') }}">
 </head>
 
 <body>
     <div class="container">
-        <div class="logo"><img src="{{ url_for('static',filename='images/werewolf/logo.png') }}" alt="Logo"></div>
+        <div class="logo"><img src="{{ url_for('werewolf_api.static',filename='images/werewolf/logo.png') }}" alt="Logo"></div>
         <div class="navbar">
             <span id="current_user">{{ name }}</span>
             <div class="float-right">
@@ -150,7 +150,7 @@
                     </p>
                     {% if role_type!='unknown' %}
                     <div class="role-img">
-                        <img src="{{ url_for('static', filename='images/werewolf/cards/' + role_type + '.jpg') }}" alt="{{ role_name }}" width="274" height="389">
+                        <img src="{{ url_for('werewolf_api.static', filename='images/werewolf/cards/' + role_type + '.jpg') }}" alt="{{ role_name }}" width="274" height="389">
                     </div>
                     {% endif %}
                 </div>
@@ -167,16 +167,16 @@
     {{ dbtxt }}
 
 
-    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('werewolf_api.static', filename='js/jquery-3.4.1.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('werewolf_api.static', filename='js/bootstrap.min.js') }}"></script>
     <!-- <script type="text/javascript" src="../static/js/ajax-utils.js"></script> -->
-    <script type="text/javascript" src="{{ url_for('static', filename='js/werewolf_game.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('werewolf_api.static', filename='js/werewolf_game.js') }}"></script>
     {% if ishost %}
     <audio id="back_audio">
-        <source src="{{ url_for('static', filename='audio/night_bgm.mp3') }}" type="audio/mpeg">
+        <source src="{{ url_for('werewolf_api.static', filename='audio/night_bgm.mp3') }}" type="audio/mpeg">
     </audio>
     <audio id="step_audio"></audio>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/get_audio.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('werewolf_api.static', filename='js/get_audio.js') }}"></script>
     {% endif %}
 </body>
 
