--- a/werewolf/templates/login.html
+++ b/werewolf/templates/login.html
@@ -33,6 +33,7 @@
             </label>
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
+        <a href="{{ url_for('werewolf_api.register') }}" class="btn btn-lg btn-info btn-block">新用户注册</a>
         <p class="mt-5 mb-3 text-muted">&copy; 2017-2019</p>
     </form>
     <!--     <script type="text/javascript" src="{{ url_for('werewolf_api.static', filename='js/jquery-3.4.1.min.js') }}"></script>
