--- a/werewolf/static/css/werewolf_game.css
+++ b/werewolf/static/css/werewolf_game.css
@@ -1,10 +1,3 @@
-/*
-* @Author: Lucien Zhang
-* @Date:   2019-10-04 18:44:09
-* @Last Modified by:   Lucien Zhang
-* @Last Modified time: 2019-10-09 16:26:10
-*/
-
 body {
     overscroll-behavior-y: contain;
     overscroll-behavior-x: none;
@@ -22,7 +15,7 @@ body {
 .navbar {
     position: absolute;
     top: 25px;
-    padding: 0px;
+    padding: 0;
     width: 93%;
     line-height: 34px;
     color: #fff;
@@ -60,7 +53,7 @@ body {
     display: inline-block;
 }
 
-.btn-group-xs>.btn,
+.btn-group-xs > .btn,
 .btn-xs {
     padding: .5rem .4rem;
     font-size: .875rem;
@@ -92,7 +85,7 @@ body {
 }
 
 #ope-panel .tip-panel .panel-buttons button {
-  margin: 0 5px;
+    margin: 0 5px;
 }
 
 #ope-panel .player-panel {
@@ -128,4 +121,9 @@ body {
 
 .role-img {
     text-align: center;
+}
+
+.host-button {
+    margin-left: 10px;
+    margin-right: 10px;
 }
