--- a/werewolf/templates/werewolf_game.html
+++ b/werewolf/templates/werewolf_game.html
@@ -11,6 +11,7 @@
         href="{{ url_for('werewolf_api.static', filename='css/bootstrap.min.css') }}">
     <link rel="stylesheet" type="text/css"
         href="{{ url_for('werewolf_api.static', filename='css/werewolf_game.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('werewolf_api.static', filename='images/favicon.ico') }}">
 </head>
 
 <body>
