--- a/werewolf/templates/test.html
+++ b/werewolf/templates/test.html
@@ -6,7 +6,7 @@
 <body>
   <h1>Flask-SSE Quickstart</h1>
   <script>
-    var source = new EventSource("{{ url_for('sse.stream') }}");
+    var source = new EventSource("{{ url_for('sse.stream',channel='u'+uid|string) }}");
     source.addEventListener('greeting', function(event) {
         var data = JSON.parse(event.data);
         alert("The server says " + data.message);
