--- a/werewolf/templates/register_success.html
+++ b/werewolf/templates/register_success.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <title>注册成功</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('werewolf_api.static', filename='css/bootstrap.min.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('werewolf_api.static', filename='css/register_success.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/register_success.css') }}">
 </head>
 
 <body>
