--- a/werewolf/templates/register.html
+++ b/werewolf/templates/register.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <title>注册</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-    <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('werewolf_api.static', filename='css/register.css') }}"> -->
+    <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/register.css') }}"> -->
 </head>
 
 <body>
@@ -59,8 +59,8 @@
 
 
 
-<!--     <script type="text/javascript" src="{{ url_for('werewolf_api.static', filename='js/jquery-3.4.1.min.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('werewolf_api.static', filename='js/bootstrap.min.js') }}"></script> -->
+<!--     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script> -->
     <script type="text/javascript" src="{{ url_for('static', filename='js/register.js') }}"></script>
 
 
