--- a/werewolf/templates/test.html
+++ b/werewolf/templates/test.html
@@ -16,5 +16,12 @@
         alert("Failed to connect to event stream. Is Redis running?"+data.message);
     }, false);
   </script>
+  <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
+<script type="text/javascript" charset="utf-8">
+    const socket = io();
+    socket.on('message', (data) => {
+      alert(data)
+}); -->
+</script>
 </body>
 </html>
