--- a/werewolf/templates/werewolf_setup.html
+++ b/werewolf/templates/werewolf_setup.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>创建房间</title>
     <link rel="stylesheet" type="text/css"
-        href="{{ url_for('werewolf_api.static', filename='css/bootstrap.min.css') }}">
+        href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <link rel="stylesheet" type="text/css"
-        href="{{ url_for('werewolf_api.static', filename='css/werewolf_setup.css') }}">
+        href="{{ url_for('static', filename='css/werewolf_setup.css') }}">
 </head>
 
 <body>
@@ -187,8 +187,8 @@
         </form>
     </div>
     <script type="text/javascript"
-        src="{{ url_for('werewolf_api.static', filename='js/jquery-3.4.1.min.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('werewolf_api.static', filename='js/werewolf_setup.js') }}"></script>
+        src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/werewolf_setup.js') }}"></script>
     <!--     <script type="text/javascript" src="../static/js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="../static/js/bootstrap.min.js"></script> -->
     <!-- <script type="text/javascript" src="../static/js/script.js"></script> -->
