--- a/werewolf/static/css/werewolf_game.css
+++ b/werewolf/static/css/werewolf_game.css
@@ -139,15 +139,15 @@ body {
     text-align: center;
 }
 
-#all_players.skill_vote > button.selected {
+#all_players.skill_vote button.selected {
     background-color: #a86432;
 }
-#all_players.skill_captain > button.selected {
+#all_players.skill_captain button.selected {
     background-color: #a86432;
 }
-#all_players.skill_wolf_kill > button.selected {
+#all_players.skill_wolf_kill button.selected {
     background-color: red;
 }
-#all_players.skill_discover > button.selected {
+#all_players.skill_discover button.selected {
     background-color: green;
 }
